--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Coding BFF</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
-        <link rel="stylesheet" href="./assets/css/jass.css" />
-        <link rel="stylesheet" href="./assets/css/style.css" />
-    </head>
 
-    <body>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coding BFF</title>
+    <link rel="stylesheet" href="./assets/css/jass.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
 
-    </body>
+<body>
+    <header class="header container-fluid bg-info text-black text-center" id="header">
+        <h1>Coding BFF</h1>
+    </header>
+
+    <div class="container col-6">
+
+    </div>
+
+    <div>
+
+    </div>
+
+    <div>
+
+    </div>
+
+
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js">
+    </script>
+</body>
+
 </html>
