--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding BFF</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/jass.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
@@ -12,21 +13,51 @@
 <body>
     <header class="header container-fluid bg-info text-black text-center" id="header">
         <h1>Coding BFF</h1>
+        <h3>Pseudo Coding & Research Assitant</h3>
     </header>
 
-    <div class="container col-6">
+    <div class="container row">
+        <div class="col-6">
+            <h2>To Do/To Learn</h2>
+            
+            <div>
+                <ul id="sortable">
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>
+                        <input type="checkbox" class="btn-check toggleButton" id="toggleButton1">
+                        <input type="text" class="input" id="input1" placeholder="test">
+                        <p>link<button type="button" class="">go</button></p>
+                    </li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 2</li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 3</li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 4</li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 5</li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 6</li>
+                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 7</li>
+                </ul>
+            </div>
+            
+        </div>
 
+        <div class="col-6">
+            <div class="row">
+                <input type="text" class="inputYoutube" id="inputYoutube" placeholder="searchYoutube">
+                <p></p><!--Searching will play the first video-->
+            </div>
+
+            <div class="row">
+                <input type="text" class="inputGoogle" id="inputGoogle" placeholder="searchGoogle">
+
+            </div>
+        </div>
     </div>
 
-    <div>
-
-    </div>
-
-    <div>
-
-    </div>
-
-
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+    <script>
+    $( function() {
+      $( "#sortable" ).sortable();
+    });
+    </script>
     <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js">
     </script>
 </body>
