--- a/index.html
+++ b/index.html
@@ -17,37 +17,109 @@
     </header>
 
     <div class="container row">
-        <div class="col-6">
-            <h2>To Do/To Learn</h2>
-            
-            <div>
-                <ul id="sortable">
-                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>
-                        <input type="checkbox" class="btn-check toggleButton" id="toggleButton1">
-                        <input type="text" class="input" id="input1" placeholder="test">
-                        <p>link<button type="button" class="">go</button></p>
-                    </li>
-                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 2</li>
-                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 3</li>
-                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 4</li>
-                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 5</li>
-                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 6</li>
-                    <li class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 7</li>
-                </ul>
+        <div class="col-8">
+            <div class="card">
+                <h3 class="card-header text-center font-weight-bold text-uppercase py-4">
+                To Do/To Learn
+                </h3>
+                <div class="card-body">
+                <div id="table" class="table-editable">
+                    <span class="table-add float-right mb-3 mr-2"
+                    ><a href="#!" class="text-success"
+                        ><i class="fas fa-plus fa-2x" aria-hidden="true"></i></a
+                    ></span>
+                    <table class="table table-bordered table-responsive-md table-striped text-center">
+                    <thead>
+                        <tr>
+                        <th class="text-center">Complete Y/N</th>
+                        <th class="text-center">Editable Area</th>
+                        <th class="text-center">Sample</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="pt-3-half" contenteditable="false"><input type="checkbox" class="btn-check toggleButton" id="toggleButton1"></td>
+                            <td class="pt-3-half" contenteditable="true">Sample Text Here</td>
+                            <td class="pt-3-half" contenteditable="true">Sample</td>
+                        </td>
+                        </tr>
+                        <tr>
+                            <td class="pt-3-half" contenteditable="false"><input type="checkbox" class="btn-check toggleButton" id="toggleButton1"></td>
+                            <td class="pt-3-half" contenteditable="true">Sample Text Here</td>
+                            <td class="pt-3-half" contenteditable="true">Sample</td>
+                        </td>
+                        </tr>
+                        <tr>
+                            <td class="pt-3-half" contenteditable="false"><input type="checkbox" class="btn-check toggleButton" id="toggleButton1"></td>
+                            <td class="pt-3-half" contenteditable="true">Sample Text Here</td>
+                            <td class="pt-3-half" contenteditable="true">Sample</td>
+                        </td>
+                        </tr>
+                        <tr>
+                            <td class="pt-3-half" contenteditable="false"><input type="checkbox" class="btn-check toggleButton" id="toggleButton1"></td>
+                            <td class="pt-3-half" contenteditable="true">Sample Text Here</td>
+                            <td class="pt-3-half" contenteditable="true">Sample</td>
+                        </td>
+                        </tr>
+                        <tr>
+                            <td class="pt-3-half" contenteditable="false"><input type="checkbox" class="btn-check toggleButton" id="toggleButton1"></td>
+                            <td class="pt-3-half" contenteditable="true">Sample Text Here</td>
+                            <td class="pt-3-half" contenteditable="true">Sample</td>
+                        </td>
+                        </tr>
+                        <tr>
+                            <td class="pt-3-half" contenteditable="false"><input type="checkbox" class="btn-check toggleButton" id="toggleButton1"></td>
+                            <td class="pt-3-half" contenteditable="true">Sample Text Here</td>
+                            <td class="pt-3-half" contenteditable="true">Sample</td>
+                        </td>
+                        </tr>
+                        <tr>
+                            <td class="pt-3-half" contenteditable="false"><input type="checkbox" class="btn-check toggleButton" id="toggleButton1"></td>
+                            <td class="pt-3-half" contenteditable="true">Sample Text Here</td>
+                            <td class="pt-3-half" contenteditable="true">Sample</td>
+                        </td>
+                        </tr>
+                        <tr>
+                            <td class="pt-3-half" contenteditable="false"><input type="checkbox" class="btn-check toggleButton" id="toggleButton1"></td>
+                            <td class="pt-3-half" contenteditable="true">Sample Text Here</td>
+                            <td class="pt-3-half" contenteditable="true">Sample</td>
+                        </td>
+                        </tr>
+                    </tbody>
+                    </table>
+                </div>
+                </div>
             </div>
-            
         </div>
 
-        <div class="col-6">
+        <div class="col-4">
             <div class="row">
-                <input type="text" class="inputYoutube" id="inputYoutube" placeholder="searchYoutube">
-                <p></p><!--Searching will play the first video-->
+                <div class="card text-center">
+                    <div class="card-header">
+                      <ul class="nav nav-pills card-header-pills">
+                        <li class="nav-item">
+                          <a class="nav-link youtube" href="#">Search YouTube</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link google" href="#">Search Google</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title">Search YouTube for Answers</h5>
+                      <input type="text" class="inputYoutube" id="inputYoutube" placeholder="searchYoutube">
+                      <a href="#" class="btn btn-primary">Search</a>
+                    </div>
+                </div>
             </div>
 
-            <div class="row">
+            <!--<input type="text" class="inputYoutube" id="inputYoutube" placeholder="searchYoutube">
+                <p></p>Searching will play the first video-->
+
+            <!--<div class="row">
                 <input type="text" class="inputGoogle" id="inputGoogle" placeholder="searchGoogle">
+            </div>-->
 
-            </div>
         </div>
     </div>
 
