--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="col-4">
             
-            <div class="row">
+            <div class="row" id="searchCard">
                 <div class="card text-center">
                     <div class="card-header">
                       <ul class="nav nav-pills card-header-pills">
@@ -109,9 +109,10 @@
                     <div class="card-body">
                       <h5 class="card-title">Search YouTube for Answers</h5>
                       <input type="text" class="inputYoutube" id="inputYoutube" placeholder="searchYoutube">
-                      <a href="#" class="btn btn-primary">Search</a>
+                      <a href="#" class="btn btn-primary" id="sendYoutube">Search</a>
                     </div>
                 </div>
+                <div id="youtubeResult"></div>
             </div>
             
 
@@ -119,15 +120,15 @@
                 <p></p>Searching will play the first video-->
 
             <div class="row m-1" id="searchElement">
-                <div id="searchForm">
+                <div class="card p-1" id="searchForm">
                     <div>
                         <input type="text" class="inputGoogle" id="inputGoogle" placeholder="searchGoogle">
                     </div>
                     <div>
-                        <button type="button" id="sendSearch">Search</button>
+                        <button type="button" class="btn btn-primary" id="sendGoogle">Search</button>
                     </div>
                 </div>
-                <div id="searchResults"></div>
+                <div id="googleResult"></div>
             </div>
 
         </div>
