--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                     </div>
-                    <div class="modal-body" id="youtubeResult"></div>
+                    <div class="modal-body p-5" id="youtubeResult"></div>
                     
                     <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -124,7 +124,7 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-                        <div class="modal-body" id="googleResult"></div>
+                        <div class="modal-body p-5" id="googleResult"></div>
                         
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
